NIM-22120 Documents addition of support for GCP  classic and modern passthrough load balancers

--- a/docs/releases/release_notes/7.10.md
+++ b/docs/releases/release_notes/7.10.md
@@ -21,3 +21,7 @@ Default permissions for newly created user home directories have been changed.
 - **Current default**: `0700 (rwx------)` — Home directories are now accessible only by the owning user.
 
 For more details, see [Home Directory Permissions](../../System_Administration/Command_Line_Interface/index.md#default-home-directory-permissions).
+
+#### Vendor Support
+
+- **GCP** -- Added support for classic and modern passthrough load balancers.
