NIM-22762: list resources to be deleted along with a user

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -40,15 +40,16 @@ SHA256 (ESXi8.0-ipfabric-7-9-3+0.ova) = 6ff74b4198bdd92289489828a2e0293ea53ab035
 MD5 (ESXi8.0-ipfabric-7-9-3+0.ova) = b23208b5da5947113baeb933b0745089
 ```
 
-### Behavioral Changes
+### Breaking Changes
 
-#### User-Specific Saved Diagrams
+#### User-Specific Customization
 
-Saved Diagrams are now user-specific and private to each user. Users can only view and manage their own saved diagrams.
+User-specific customizations are now supported. Each user can only view and manage their own customizations.
 
 !!! warning "Data Loss on User Deletion"
 
-    If a user is deleted, all saved diagrams created by that user are permanently deleted and cannot be recovered. 
+    If a user is deleted, all saved customizations created by that user are permanently deleted and cannot be recovered.
+    For more details, please refer to [Delete user page](../../IP_Fabric_Settings/administration/users.md#delete-user).
 
 ### Improvements
 
