NIM-22835 add known issue IPv4 routes with an IPv6 NH

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -119,3 +119,7 @@ An experimental dedicated worker for API-based discovery is available. When enab
 Discovery behavior and results remain unchanged. The solution includes built-in protections to respect vendor API rate limits and is designed to scale independently.
 
 This feature is **disabled by default**. Customers interested in evaluating it can **contact IP Fabric Customer Support** for more information and assistance with enabling it.
+
+### Miscellaneous
+
+- Added documentation for a [known limitation with RFC 5549](../../support/known_issues/IP_Fabric/ipv4-over-ipv6-limitations.md) (IPv4 routes with IPv6 as next hop).
