MQ-9211: LLRN and hashes 7.9.4 GA

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -21,35 +21,56 @@ description: In this section, you can find the release notes for v7.9 releases.
 - Using separate Vendor API configurations to discover the Shared VPC host and service projects leads to inconsistent results. This will be fixed in a future release.
   More details regarding the issue can be seen [here](../../support/known_issues/Vendors/gcp.md).
 
-## v7.9.3 (January 14th, 2026; GA)
+## Breaking Changes
 
-```
-SHA256 (ipfabric-update-7-9-3+0.tar.zst.sig) = e636f2ebc41d51313face02628fabfada914107396f201626e90617cae338407
-MD5 (ipfabric-update-7-9-3+0.tar.zst.sig) = 7384714c5f33a898c387bc75ea6e2923
-SHA256 (ipfabric-7-9-3+0.qcow2) = 35aac5d53607b829b4ce5236c1af93ba1fd082d4c7649c81c36a0a5456213f5b
-MD5 (ipfabric-7-9-3+0.qcow2) = e2f8f80214870baacd68c12aafd55641
-SHA256 (ipfabric-7-9-3+0.vmdk) = 27a7e66afac5a98c22d32e98ae740a45ef30c5e9c81f7164fb3b163479173591
-MD5 (ipfabric-7-9-3+0.vmdk) = 05aa9efba7e8b6f15e1e5eedc6c438dc
-SHA256 (ipfabric-7-9-3+0.vhdx.zst) = 5a55aff66dbe7f811d1333aed9e755893b3ba30553f968c13f888cbad1da03ed
-MD5 (ipfabric-7-9-3+0.vhdx.zst) = 200530ac697a3d378518286075aa09ad
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-9-3+0.ova) = 98941c30df19cd7b67e1585c8a5615205695e976d15d2fe292a81d064c41613e
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-9-3+0.ova) = 7df26d3603788720f8e72251a7a1e051
-SHA256 (unsupported-ESXi7.0-ipfabric-7-9-3+0.ova) = 72cc6be2aef3a32854a982d55bee3ad0f7b0b2bf816fd0067f4969ee4018a36f
-MD5 (unsupported-ESXi7.0-ipfabric-7-9-3+0.ova) = 9fbb786e9487f8d6fe5b2a0d157c5c2c
-SHA256 (ESXi8.0-ipfabric-7-9-3+0.ova) = 6ff74b4198bdd92289489828a2e0293ea53ab035ea8f1472a4c61e553e7a0f4b
-MD5 (ESXi8.0-ipfabric-7-9-3+0.ova) = b23208b5da5947113baeb933b0745089
-```
+### User-Specific Customization
 
-### Breaking Changes
-
-#### User-Specific Customization
-
-User-specific customizations are now supported. Each user can only view and manage their own customizations.
+User-specific customizations are now supported.
 
 !!! warning "Data Loss on User Deletion"
 
     If a user is deleted, all saved customizations created by that user are permanently deleted and cannot be recovered.
     For more details, please refer to [Delete user page](../../IP_Fabric_Settings/administration/users.md#delete-user).
+
+## v7.9.4 (February 5th, 2026; GA)
+
+```
+SHA256 (ipfabric-update-7-9-4+0.tar.zst.sig) = 9144c144100174baf7a605dfc070c04dab1f732ec7de1a158317c527ef0ded90
+MD5 (ipfabric-update-7-9-4+0.tar.zst.sig) = 89ea04a9846d4afef4a24f880aba774f
+SHA256 (ipfabric-7-9-4+0.qcow2) = 9f046daa45ba9a5bb076733d302bbab4c79afaf9402007e58375bd70120d8451
+MD5 (ipfabric-7-9-4+0.qcow2) = e20203cad7dfa910a588c88c24e0349c
+SHA256 (ipfabric-7-9-4+0.vmdk) = 19a41be89028d9325143a915e0d78483c89048cc7bf2cb349b446986d8a05888
+MD5 (ipfabric-7-9-4+0.vmdk) = 85441314f6574988e8550f1846763788
+SHA256 (ipfabric-7-9-4+0.vhdx.zst) = 8dd2d1a601bcace4b22de9e5dbb32970b72d46cd5f63e3f3d549f648f283d42a
+MD5 (ipfabric-7-9-4+0.vhdx.zst) = 667e81724f4abde193d541ded450206c
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-9-4+0.ova) = d169a345755ba3f53768fc4d03785f912f63a82e76d53aef33e702b60e1bb256
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-9-4+0.ova) = d55bdbfcd8bff73d381723ebbbd3f02a
+SHA256 (unsupported-ESXi7.0-ipfabric-7-9-4+0.ova) = 8c7d2ed9e93341cf0e555800051752a4b2a248d10aedccfb172baaa45d681c28
+MD5 (unsupported-ESXi7.0-ipfabric-7-9-4+0.ova) = 84bb3be636282a33cb5c1fc1c2aef45d
+SHA256 (ESXi8.0-ipfabric-7-9-4+0.ova) = dcd11ab08ab19d1515f081ec0943527fc78d09a9eef33442b1bf31062755f4ff
+MD5 (ESXi8.0-ipfabric-7-9-4+0.ova) = d1b2c67ec60f86cd990bc9aff6eca9f9
+```
+
+### Improvements
+
+- Password changes now require the acting user to verify their own password in addition to setting the new password for the target account. This improves protection against unauthorized changes made from unattended or unlocked admin sessions.
+- Saved diagram views are once again visible to all local users, rather than being limited to the user who created them.
+
+### Bug Fixes
+
+- Fixed upgrade portal getting stuck in `Upgrade process initializing` status after a failed download and second upgrade attempt.
+- Resolved `ipf-connection-tester` failure with `ValidationError: must not be undefined` when running SSH/telnet tests.
+- Fixed missing routes parsing on HPE Aruba CX devices.
+- Fixed CSV download error `Couldn't download - Network Issue` and restored API export of full JSON for **Platforms --> Stacks --> Members**.
+- Fixed missing HPE Aruba APs in **Inventory --> Devices** caused by `uiVendorList.find is not a function`.
+- Fixed error `Could not find data for the gallery ID` for Azure mapping.
+- Corrected parsing errors for `commands/huawei/_vrp/mpls/lspVerbose` on Huawei VRP devices.
+- Corrected parsing errors for `commands/cisco/_nxos/interface` on Cisco NX-OS devices.
+- Corrected parsing errors for `commands/cisco/controllersOptics` on Cisco devices.
+- Corrected parsing errors for `commands/fs/_fsos/mlagPeer` to handle MLAG peer absence on FSOS devices.
+- Corrected LLDP neighbor port mapping and restored missing neighbors on HPE Comware devices.
+
+## v7.9.3 (January 14th, 2026; GA)
 
 ### Improvements
 
