--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -51,7 +51,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - `NIM-20958` -- Highest -- Syslog worker reaching heap / memory limit
-- `NIM-21156` -- Low -- Slow PSQL query getEVlanNoDesignatedId
+- `NIM-21156` -- Low -- [PSQL] Slow PSQL query getEVlanNoDesignatedId
 - `NIM-21683` -- High -- User with no rights gets `Unexpected Failure` error after login
 - `NIM-21695` -- Highest -- Unexpected API failure when loading STP instance members
 - `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results
@@ -617,7 +617,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information [7.5]
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
 - `NIM-18897` -- Medium -- Cloud scaling groups [7.5]
-- `NIM-18984` -- Medium -- Cloud subnets discovery [7.8]
+- `NIM-18984` -- Medium -- Cloud subnets discovery [7.5]
 - `NIM-19003` -- Medium -- v6 support for BGP Advertised Routing task
 - `NIM-19078` -- Medium -- Syslogworker improvements
 - `NIM-19087` -- High -- Fix PSQL Pathlookup Failing Tests
