--- a/docs/releases/release_notes_low-level/7.x/7.8.md
+++ b/docs/releases/release_notes_low-level/7.x/7.8.md
@@ -132,28 +132,28 @@ Task may be associated into Epics or Stories to form complex features.
 
 Epics are high-level features, that may consist of many tasks.
 
-- `NIM-6892` -- Highest -- Unify logging through our projects to log to stdout/stderr - 7.6
+- `NIM-6892` -- Highest -- Unify logging through our projects to log to stdout/stderr [7.8]
 - `NIM-13186` -- Medium -- GCP - Interconnect Support 7.8 - DDD
-- `NIM-15017` -- Highest -- Upgrade Node.js to v22
+- `NIM-15017` -- Highest -- Upgrade Node.js to v22 [7.8]
 - `NIM-15411` -- High -- Migrate techsupport and backups to PSQL
 - `NIM-16883` -- Medium -- Cloud Virtual NIC in path-lookup & diagrams 7.8 - DDD
-- `NIM-16927` -- Medium -- Azure Private Link Support 7.8 - DDD
+- `NIM-16927` -- Medium -- Azure Private Link Support [7.8]
 - `NIM-17539` -- Medium -- Transitioning from Current Webpack Build-Tool-Chain to Vite (or better alternative) in the Frontend Package
 - `NIM-18599` -- Medium -- Azure Firewall Support 7.8 - DDD
 - `NIM-19381` -- Medium -- Utilize Chromatic for automated visual testing of Storybook library
 - `NIM-19527` -- Medium -- Cloud subnets UI/tables [7.8]
 - `NIM-19529` -- Medium -- Cloud Endpoint Groups UI/tables 7.8 - DDD
-- `NIM-19652` -- Medium -- Cisco Meraki - Implement Path Lookup improvements 7.8
-- `NIM-19805` -- Medium -- IPv4 + IPv6 - Route summary [phase 1] 7.8
-- `NIM-19839` -- Medium -- Cloud Public IPs - 7.8
-- `NIM-19878` -- High -- Independent product versioning - 7.8
+- `NIM-19652` -- Medium -- Cisco Meraki - Implement Path Lookup improvements [7.8]
+- `NIM-19805` -- Medium -- IPv4 + IPv6 - Route summary [7.8]
+- `NIM-19839` -- Medium -- Cloud Public IPs [7.8]
+- `NIM-19878` -- High -- Independent product versioning [7.8]
 - `NIM-19892` -- Medium -- ArangoDB cleanup removal from the product
 - `NIM-20007` -- Medium -- Cisco NX-OS - Implement IPv6 features [7.8]
 - `NIM-20010` -- Medium -- Improve default IPv6 discovery settings [7.8]
 - `NIM-20018` -- Medium -- Design and implement AWS IAM Identity Center integration - 7.8
 - `NIM-20070` -- Medium -- GCP - Global and Regional Routing in VPC 7.8 - DDD
-- `NIM-20076` -- Medium -- Google Network Endpoint Group 7.8 - DDD
-- `NIM-20078` -- Medium -- GCP: Private Service Connect​ 7.8 - DDD
+- `NIM-20076` -- Medium -- Google Network Endpoint Group [7.8]
+- `NIM-20078` -- Medium -- GCP: Private Service Connect​ [7.8]
 - `NIM-20080` -- Medium -- Azure - VNET integration 7.8 - DDD
 - `NIM-20091` -- Medium -- GCP - Load Balancer Support 7.8 - DDD
 - `NIM-20385` -- Medium -- Fix partitions in queries & tables
@@ -514,7 +514,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-21974` -- Highest -- Fix RBAC: ipf-checker related to POST /tables/management/snapshots
 - `NIM-21975` -- High -- Fix device filters for /tables/snapshot-devices
 - `NIM-21986` -- Medium -- Cannot save snapshot settings on lab snapshot
-- `NIM-22004` -- Medium -- [MCP] Agents do not read the response in pathlookup-tool if response contains image
+- `NIM-22004` -- Medium -- Agents do not read the response in pathlookup-tool if response contains image
 - `NIM-22018` -- Medium -- Management > Configuration - filter Status `no change` does not work
 - `NIM-22028` -- Highest -- Broken LDAPs after NodeJS upgrade
 
@@ -522,8 +522,8 @@ Anything that we considered an incorrect behavior. Something that was not workin
 
 Task may be associated into Epics or Stories to form complex features.
 
-- `NIM-14108` -- Medium -- virtualMachines task - change references to network interfaces - future
-- `NIM-14525` -- Medium -- Retype NUMERIC fields in PSQL schema
+- `NIM-14108` -- Medium -- virtualMachines task - change references to network interfaces
+- `NIM-14525` -- Medium -- [PSQL] Retype NUMERIC fields in PSQL schema
 - `NIM-14672` -- High -- Implement List component + related ones
 - `NIM-14930` -- Medium -- migrate Lab39
 - `NIM-15448` -- High -- Review behaviour: RBAC for User API Tokens
@@ -580,7 +580,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-19772` -- Highest -- Extend import/export scope to cover more configuration related data
 - `NIM-19785` -- High -- Make IPSubnetInput trigger leave dialog from error state
 - `NIM-19797` -- Medium -- Remove the explanatory message box above snapshot list in 7.5
-- `NIM-19840` -- Medium -- Cloud - display public IP addresses in UI - 7.8
+- `NIM-19840` -- Medium -- Cloud - display public IP addresses in UI
 - `NIM-19850` -- Medium -- IPv6 - Route summary - Cisco ASA, ACI, IOS-XR, NX-OS, FTD
 - `NIM-19858` -- Medium -- IPv4 + IPv6 - Route summary - Fortigate
 - `NIM-19862` -- Medium -- IPv4+IPv6 - Route summary - Palo Alto PAN-OS
@@ -614,7 +614,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-20245` -- High -- Investigate removing Arango dependency from appliance
 - `NIM-20257` -- Medium -- Inconsistent Column Names
 - `NIM-20325` -- Medium -- Investigate Arango-specific usage of the `arangoDb` object
-- `NIM-20330` -- Low -- Add an option to run SQL files in migrations
+- `NIM-20330` -- Low -- [PSQL] Add an option to run SQL files in migrations
 - `NIM-20344` -- Highest -- Fix failing tests for tables dhcp/server/* (valid)
 - `NIM-20345` -- Low -- Fix failing test for table dhcp/relay/interfaces (valid)
 - `NIM-20352` -- Medium -- Fix failing tests for table reports/settingsOui (valid)
@@ -646,8 +646,8 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-20414` -- Medium -- Device Attributes Import/Export - Data import
 - `NIM-20423` -- High -- appliance-builder: Increase volume size for built resources
 - `NIM-20431` -- Medium -- Measure amount of data needed for path-lookup
-- `NIM-20441` -- Medium -- GCP: Private Service Connect - Endpoints - implementation
-- `NIM-20455` -- Medium -- [Backend] Disable logging outside of stdout - 7.7
+- `NIM-20441` -- Medium -- GCP: Private Service Connect - Endpoints type - implementation
+- `NIM-20455` -- Medium -- Disable logging outside of stdout
 - `NIM-20461` -- High -- Device Attributes Import/Export - Update design of import/export panel
 - `NIM-20462` -- Medium -- Device Attributes Import/Export - Side panel & export
 - `NIM-20490` -- High -- Saved filters with unsupported cross-column operators should present a warning
@@ -660,7 +660,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-20888` -- High -- Improve error message when backend sends string timestamps
 - `NIM-20911` -- Medium -- E2E test of the journal -> techsupport extraction
 - `NIM-20913` -- High -- Test slowdown loading many snapshots
-- `NIM-20930` -- Medium -- Add support for Zonal and Hybrid Network Endpoint Groups under cloud endpoint groups task [7.8]
+- `NIM-20930` -- Medium -- Add support for Zonal and Hybrid Network Endpoint Groups under cloud endpoint groups task
 - `NIM-20951` -- Medium -- Azure - normalize resource IDs to lowercase
 - `NIM-20956` -- High -- Get all e2e path tests passing on 7.3 & 7.5 branches
 - `NIM-20957` -- Medium -- Cisco ACI - change mapping of any group from range to trivial true
@@ -707,7 +707,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-21301` -- Medium -- Cleanup ArangoPostgres data providers
 - `NIM-21314` -- Medium -- Try to use priorities on repositories to get proper versions
 - `NIM-21318` -- Medium -- Rename scalingGroup property to endpointGroup in virtualMachines task and add property for GCP
-- `NIM-21319` -- Medium -- Private Endpoints UI/tables 7.8
+- `NIM-21319` -- Medium -- Private Endpoints UI/tables
 - `NIM-21320` -- Medium -- Update vVirtualMachines tables to contain endpoint group property and add hyperlinks from "Endpoint Groups" tables.
 - `NIM-21328` -- Medium -- Update OAS and Public Doc about NGINX limits
 - `NIM-21331` -- Medium -- Remove all remaining usages of Arango and library dependency
@@ -716,13 +716,13 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-21365` -- Medium -- Cloud Interface Endpoints - task refactor
 - `NIM-21366` -- High -- [PSQL] Delete vNat + vNatPool DB tables
 - `NIM-21367` -- Medium -- Remove migrateSystem (arango) from code
-- `NIM-21412` -- Highest -- [MCP] path lookup tools
+- `NIM-21412` -- Highest -- path lookup tools
 - `NIM-21417` -- Medium -- Remove aql-sql-testing service
 - `NIM-21473` -- Medium -- Check _ci selection in SyntaxSecuritySearch
 - `NIM-21476` -- Highest -- Investigate RabbitMQ loosing users on another host
 - `NIM-21477` -- Medium -- [spike] Backend team testing strategy
 - `NIM-21498` -- High -- Revise ipf-webhook-worker log configuration
-- `NIM-21500` -- High -- Make API to log frontend exceptions to the stdout
+- `NIM-21500` -- High -- [PSQL] Make API to log frontend exceptions to the stdout
 - `NIM-21502` -- Medium -- Add techsupport export plugins for every package containing LogNamespace
 - `NIM-21527` -- Medium -- Biome warnings - Do not shadow the global Promise (900+)
 - `NIM-21532` -- Medium -- Create zodV4Schemas
@@ -746,7 +746,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-21654` -- High -- Implement AWS cloud vendor native icons
 - `NIM-21659` -- Medium -- Add snippets to Config Wizard step #2
 - `NIM-21661` -- Medium -- vCloudNetworkInterfaces - add reference to vCloudSubnets
-- `NIM-21665` -- Medium -- Private Link Services UI/tables 7.8
+- `NIM-21665` -- Medium -- Private Link Services UI/tables
 - `NIM-21666` -- Highest -- Update the UI message to notify customers about increased number of loaded snapshots
 - `NIM-21670` -- Highest -- Add analyze total duration metric
 - `NIM-21698` -- Medium -- Add /licenses/upload an /support/status endpoints to RBAC
@@ -766,18 +766,18 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-21800` -- Medium -- Store original IP in routing table
 - `NIM-21819` -- Medium -- Fix e2e failing on main
 - `NIM-21843` -- High -- GCP client - add support for multiple projects
-- `NIM-21846` -- Medium -- Single version of OAS 3.1
+- `NIM-21846` -- Medium -- Single version of OAS
 - `NIM-21863` -- High -- Migrate nexthop for IPv6 to follow same shape as nexthop for IPv4
 - `NIM-21893` -- Highest -- Huawei YunShan - fix ver detection and run disco as VRP
 - `NIM-21910` -- Medium -- Store ACI device type (leaf / spine) into device model
 - `NIM-21912` -- Medium -- Azure - ServiceTagDetails refactor
-- `NIM-21915` -- Medium -- Public IP to cloud endpoints interfaces table - 7.8
-- `NIM-21923` -- Medium -- [MCP] Research how to provide repository/operational context to AI agent via MCP
+- `NIM-21915` -- Medium -- Public IP to cloud endpoints interfaces table
+- `NIM-21923` -- Medium -- Research how to provide repository/operational context to AI agent via MCP
 - `NIM-21948` -- Medium -- [ipf-checker] - implement json output
 - `NIM-21963` -- Highest -- Set default Maximum number of loaded snapshots and locked snapshots in 7.5 to same values like in 7.3
 - `NIM-22008` -- Medium -- Azure Firewall - new packet selector
 - `NIM-22009` -- Medium -- Run ANALYZE after database dump restore
-- `NIM-22014` -- Medium -- [MCP] Path lookup - improve validation for snapshotId
+- `NIM-22014` -- Medium -- Path lookup - improve validation for snapshotId
 - `NIM-22016` -- Medium -- Fix failing test for discovery-testing
 - `NIM-22020` -- Medium -- Add VLAN for wireless clients
 - `NIM-22042` -- Medium -- Meraki - Extend STP for all vlans
