--- a/docs/releases/release_notes_low-level/7.x/7.9.md
+++ b/docs/releases/release_notes_low-level/7.x/7.9.md
@@ -6,7 +6,41 @@ search:
 
 # LLRN 7.9
 
-These are low-level release notes for IP Fabric release branch `7.9`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 211 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.9`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 228 fixed issues.
+
+## 7.9.4
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-22444` -- High -- Several parsing/mapping issues
+- `NIM-22478` -- High -- Wrong port in LLDP neighbor table and Missing Neighbors - HPE Comware
+- `NIM-22558` -- Medium -- Can't Download CSV (Couldn't download - Network Issue) and can't use API to collect the full json -- Platforms > Stacks > Members
+- `NIM-22571` -- Medium -- FSOS - mlag peer without neighbor
+- `NIM-22687` -- High -- Upgrade portal stuck on Initializing after 2nd attempt after failed download
+- `NIM-22749` -- High -- Missing ARUBA APs in 7.9 due the error : uiVendorList.find is not a function
+- `NIM-22750` -- Medium -- Parser issues under Discovery Issues -can cause missing or incomplete L1/L2 connections?
+- `NIM-22765` -- Highest -- Saved diagrams show inconsistent / unexpected behavior in - 7.9.3
+- `NIM-22808` -- Highest -- ipf-connection-tester NOT working in 7.9.3 - ValidationError - Node.js
+- `NIM-22822` -- Medium -- ABTaskMapResultError: "[0].intL3Name" is required
+- `NIM-22825` -- High -- Azure Mapping failures - relates to 7.9 new feature
+- `NIM-22827` -- High -- Azure Mapping failures - Could not find data for the gallery ID
+- `NIM-22888` -- High -- Missing routes on ArubaCX
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-22491` -- High -- 11 - Moderate - Password Reset without Reauthentication [part 2]
+
+### Sub-Tasks
+
+Sub-tasks are very well contained work packages, organized under Tasks.
+
+- `NIM-22485` -- Medium -- Fix parsing commands/huawei/_vrp/mpls/lspVerbose
+- `NIM-22489` -- Medium -- Fix commands/cisco/_nxos/interfa
+- `NIM-22490` -- Medium -- Fix parsing commands/cisco/controllersOptics
 
 ## 7.9.3
 
@@ -15,13 +49,13 @@ These are low-level release notes for IP Fabric release branch `7.9`. Please not
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - `NIM-22511` -- Highest -- Configuration Management table slow PSQL query and timeout in GUI
-- `NIM-22579` -- Highest -- Unable to upgrade 7.5.13 to 7.9.1 (7.9.0+187) due to INSERT INTO eHasApiScopes duplicate key value violates unique constraint
+- `NIM-22579` -- Highest -- Part 2 - Unable to upgrade 7.5.13 to 7.9.1 (7.9.0+187) due to INSERT INTO eHasApiScopes duplicate key value violates unique constraint
 
 ### Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- `NIM-19044` -- Highest -- Insecure Password Complexity Requirements
+- `NIM-19044` -- Highest -- 4 - Critical - Insecure Password Complexity Requirements
 
 ### Sub-Tasks
 
