NIM-22851 release notes for SSH protocol version 2.99 support

--- a/docs/releases/release_notes/7.10.md
+++ b/docs/releases/release_notes/7.10.md
@@ -12,6 +12,8 @@ description: In this section, you can find the release notes for v7.10 releases.
 
 ## Improvements
 
+SSH client now recognizes SSH protocol version 2.99 and is able to connect to [affected Cisco IOS devices](../../support/known_issues/Vendors/cisco/Invalid_Identification_String.md).
+
 ### Security Hardening
 
 Default permissions for newly created user home directories have been changed.
