ST-522: Update IOPS baseline

--- a/docs/releases/release_notes/7.10.md
+++ b/docs/releases/release_notes/7.10.md
@@ -25,3 +25,7 @@ For more details, see [Home Directory Permissions](../../System_Administration/C
 #### Vendor Support
 
 - **GCP** -- Added support for classic and modern passthrough load balancers.
+
+### Miscellaneous
+
+- The `ipf-checker` now reports more accurate values. These changes do not affect any functionality (only increased values are observed).
