Improvement of 7.9 RNs on Breaking Change

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -23,14 +23,10 @@ description: In this section, you can find the release notes for v7.9 releases.
 
 ## Breaking Changes
 
-### User-Specific Customization
+### Data Loss on User Deletion
 
-User-specific customizations are now supported.
-
-!!! warning "Data Loss on User Deletion"
-
-    If a user is deleted, all saved customizations created by that user are permanently deleted and cannot be recovered.
-    For more details, please refer to [Delete user page](../../IP_Fabric_Settings/administration/users.md#delete-user).
+If a user is deleted, all saved customizations created by that user are permanently deleted and cannot be recovered.
+For more details, please refer to [Delete user page](../../IP_Fabric_Settings/administration/users.md#delete-user).
 
 ## v7.9.4 (February 5th, 2026; GA)
 
